adjusts spacing issue on tryout review page

--- a/client/style.scss
+++ b/client/style.scss
@@ -74,6 +74,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 15px;
 }
 
+.sportRow{
+  display: inline;
+}
 .text-center {
   text-align: center;
 }
